--- a/index.html
+++ b/index.html
@@ -1,14 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejercicios java</title>
-</head>
-<body>
-    
+    <meta name="description" content="Ritual es un lugar de encuentro para que todos los amantes de las ciencias ocultas
+    puedan compartir un universo en común, se parte de él.">
+    <meta name="keywords" content="ritual saumerio velas energia humor amor ">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="./estilos/estilos.css">
+    <title>Ritual |Tienda Esotérica|</title>
 
-    <script src="codigo.js"></script>
+</head>
+
+<body id="body">
+
+    <header id="header">
+
+        <nav class="navbar navbar-expand-lg navbar-light navegacion">
+            <div class="container-fluid" id="botoneraHeader">
+                <a class="navbar-brand" href="./index.html">
+                    <img src="./img/RITUAL LOGO 2.png" width="200px" height="200px" alt="">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link active" aria-current="page" href="./secciones/productos.html">Productos</a>
+                        <a class="nav-link active" href="./secciones/noticias.html">Noticias</a>
+                        <a class="nav-link active" href="./secciones/historia.html">Historia</a>
+                        <a class="nav-link active" href="./secciones/contacto.html">Contacto</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+
+
+    </header>
+
+
+    <main id="main">
+        <section class="hero">
+            <h1>|Tienda Esotérica|</h1>
+        </section>
+        <h2 class="titulomenor">Bienvenidos al mundo Ritual</h2>
+        <section class="preMain">
+            <p>Ritual es un lugar de encuentro para que todos los amantes de las ciencias ocultas
+                puedan compartir un universo en común, se parte de él. </p>
+            <button class="button" href="./secciones/productos.html">Comprar!</button>
+        </section>
+        <section id="galeria">
+            <div id="glry1">
+                <img src="./img/piedras y estatuilla.jpeg" alt="mesaPiedras">
+            </div>
+            <div id="glry2">
+                <img src="./img/rellenos saumerio general.jpeg" alt="saumerio">
+            </div>
+            <div id="glry3">
+                <img src="./img/libro abierto.jpeg" alt="saumerio">
+            </div>
+            <div id="glry4">
+                <img src="./img/saumerios.jpeg" alt="saumerios">
+            </div>
+            <div id="glry5">
+                <img src="./img/rellenado de saumerio.jpeg" alt="">
+            </div>
+            <div id="glry6">
+                <img src="./img/bolsa y piedras sueltas.jpeg" alt="">
+            </div>
+
+
+
+
+
+
+        </section>
+
+    </main>
+
+
+    <footer class="footer">
+        <div class="footer__cont">Instagram</div>
+        <div class="footer__cont">Facebook</div>
+        <div class="footer__cont">Twitter</div>
+    </footer>
+    <script src="./codigo.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
 </body>
+
 </html>
