--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                         <a class="nav-link active" href="./secciones/noticias.html">Noticias</a>
                         <a class="nav-link active" href="./secciones/historia.html">Historia</a>
                         <a class="nav-link active" href="./secciones/contacto.html">Contacto</a>
+                        <button tipe="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" >
+                            Ver carrito de compras <i class="bi bi-bag-check-fill"></i>
+                        </button>
                     </div>
                 </div>
             </div>
@@ -52,33 +55,44 @@
         <section class="preMain">
             <p>Ritual es un lugar de encuentro para que todos los amantes de las ciencias ocultas
                 puedan compartir un universo en común, se parte de él. </p>
-            <button class="button" href="./secciones/productos.html">Comprar!</button>
         </section>
-        <section id="galeria">
-            <div id="glry1">
-                <img src="./img/piedras y estatuilla.jpeg" alt="mesaPiedras">
-            </div>
-            <div id="glry2">
-                <img src="./img/rellenos saumerio general.jpeg" alt="saumerio">
-            </div>
-            <div id="glry3">
-                <img src="./img/libro abierto.jpeg" alt="saumerio">
-            </div>
-            <div id="glry4">
-                <img src="./img/saumerios.jpeg" alt="saumerios">
-            </div>
-            <div id="glry5">
-                <img src="./img/rellenado de saumerio.jpeg" alt="">
-            </div>
-            <div id="glry6">
-                <img src="./img/bolsa y piedras sueltas.jpeg" alt="">
-            </div>
 
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Carrito</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="container">
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">ID</th>
+                                        <th scope="col">Nombre</th>
+                                        <th scope="col">Precio</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="items"></tbody>
+                                <tfoot>
+                                    <tr id="footer">
+                                        <th scope="row" colspan="5">--Carrito vacío--</th>
+                                    </tr>
+                                </tfoot>
+                            </table>
+                            <div class="row" id="cards"></div>
+                        </div>
 
-
-
-
-
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                        <button type="button" class="btn btn-primary">Terminar compra</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <section id="contenedor-pagina">
         </section>
 
     </main>
@@ -89,6 +103,7 @@
         <div class="footer__cont">Facebook</div>
         <div class="footer__cont">Twitter</div>
     </footer>
+    <script src="./productos.js"></script>
     <script src="./codigo.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
