--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
         <div class="footer__cont">Facebook</div>
         <div class="footer__cont">Twitter</div>
     </footer>
+
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./productos.js"></script>
     <script src="./codigo.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
